--- a/EMS/styles.css
+++ b/EMS/styles.css
@@ -188,3 +188,19 @@ select {
     50% { opacity: 1; }
     100% { opacity: 0; }
 }
+
+footer {
+    background-color: var(--generalColor);
+    color: white;
+    padding: 10px 0;
+    position: relative;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+    font-size: 14px;
+    margin-top: 50px;
+}
+
+.footer-content p {
+    margin: 5px 0;
+}
