--- a/TEST/styles/styles.css
+++ b/TEST/styles/styles.css
@@ -208,3 +208,22 @@ footer {
 .footer-content p {
     margin: 5px 0;
 }
+
+.ecg-loader {
+    width: 100%;
+    height: 50px;
+    background: linear-gradient(to right, #000 50%, #fff 50%);
+    background-size: 200% 100%;
+    animation: ecg 1.5s infinite linear;
+    visibility: hidden;  /* Initialement caché */
+  }
+  
+  @keyframes ecg {
+    0% {
+      background-position: 200% 0;
+    }
+    100% {
+      background-position: 0 0;
+    }
+  }
+  
