--- a/TEST/styles/styles.css
+++ b/TEST/styles/styles.css
@@ -208,22 +208,28 @@ footer {
 .footer-content p {
     margin: 5px 0;
 }
+  
 
-.ecg-loader {
+#loadingOverlay {
+    position: fixed;
+    top: 0;
+    left: 0;
     width: 100%;
-    height: 50px;
-    background: linear-gradient(to right, #000 50%, #fff 50%);
-    background-size: 200% 100%;
-    animation: ecg 1.5s infinite linear;
-    visibility: hidden;  /* Initialement caché */
-  }
-  
-  @keyframes ecg {
-    0% {
-      background-position: 200% 0;
-    }
-    100% {
-      background-position: 0 0;
-    }
-  }
-  
+    height: 100%;
+    backdrop-filter: blur(5px);
+    background: rgba(255, 255, 255, 0.5);
+    z-index: 9999;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    visibility: hidden;
+}
+
+#spinner {
+    width: 50px;
+        height: 50px;
+        border: 6px solid #ccc;
+        border-top-color: #000;
+        border-radius: 50%;
+        animation: spin 1s linear infinite;
+}
