--- a/EMS/styles/styles.css
+++ b/EMS/styles/styles.css
@@ -208,3 +208,39 @@ footer {
 .footer-content p {
     margin: 5px 0;
 }
+
+.ecg-loader {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    backdrop-filter: blur(5px);
+    display: none; /* Cacher par défaut */
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+  }
+  
+  svg {
+    height: 7em;
+    width: 10em;
+    stroke-width: 5px;
+    fill: none;
+    stroke: darkred;
+    stroke-dasharray: 600;
+    stroke-dashoffset: 600;
+    animation: dash 2s cubic-bezier(.65,.12,.47,.84) infinite;
+    stroke-miterlimit: 10;
+  }
+  
+  @keyframes dash {
+    50% {
+      stroke-dashoffset: 1200;
+    }
+  
+    100% {
+      stroke-dashoffset: 1200;
+      opacity: 0;
+    }
+  }
